# grabCut

./: CMakeLists.txt  GMM.cpp  GMM.h  TempGMM.cpp  TempGMM.h  fastmath.h  onMouse.h  pps014.mov  readme.md  test1-OpenCV-readimg.cpp  test2-OpenCV-touchMouse.cpp  test3-OpenCV-Graphcut.cpp  test4-OpenCV-Grabcut.cpp  test5-OpenCv-TempGrabcut.cpp  test6-OpenCV-color.cpp  tools.h
maxflow-v3.01/: CMakeLists.txt
someResult/: 思考.md
